2008-01-20  Sanel <karijes@users.sourceforge.net>

	* First changelog entry in 2008 !!! ;)
	* Fixed crashing in font chooser 
	* Completed (at some point) font chooser documentation
	* Added default_name and default_size as parameters for font_chooser()
	function

2007-12-12  Sanel <karijes@users.sourceforge.net>

	* Added Missing.{h,c} with various functions that are missing on other
	unix'es beside linux
	* Added some #ifdefs for __restrict_arr in rx/regex.h since older gcc
	versions will not correctly resolve 'regmatch_t __pmatch[__restrict_arr]'
	construct

2007-12-07  Sanel <karijes@users.sourceforge.net>
	
	* Removed check for awk
	* Removed check for kqueue

2007-12-06  Sanel <karijes@users.sourceforge.net>

	* Use LocalDepends and LocalClean in Jamrules
	* Let mime_type be NULL when new node was created in xdgmimeglob.c. This
	should assure we don't get odd crashes in xdgmime
	* Generating README gives more problems than it solves it (especially for
	platforms without gawk by default) so genreadme and index.dox are removed
	and README and INSTALL are added
	* Removed unused files from docs too

2007-12-05  Sanel <karijes@users.sourceforge.net>

	* Better compilation of test suite when edelib was compiled without X11
	and FLTK support
	* Fixed uninitialized variable valgrind detected in Window class
	* jam install now finaly works as should be
	* Let 'test' use '-z' in mime.m4, Solaris shell don't like 'test ! ...'
	construct

2007-12-02  Sanel <karijes@users.sourceforge.net>

	* Removed clear parameter from dir_list
	* Added show_dots parameter in dir_list
	* dir_list() will clear list before items are added

2007-12-01  Sanel <karijes@users.sourceforge.net>

	* Let daylight variable checks do linking not compiling only since
	variable is externaly declared
	* Rewrote dir_list so it does not use scandir() any more due portability
	* Also fixed bug where previous dir_list() didn't show '.' and '..'
	directories